--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<a id="upload" href="https://api.imgur.com/oauth2/authorize?response_type=token&client_id=e781a07d0760a0a">Upload to imgur</a>
 	</body>
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 	<script src="js/b64.js"></script>
 	<script src="js/LZWEncoder.js"></script>
 	<script src="js/NeuQuant.js"></script>
