--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> 
-		<title>INTENSIFIER</title>
+		<title>WIGGLE-FIER</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 	</head>
 
