--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 		<img id="image" />
 
-		<a id="upload" href="https://api.imgur.com/oauth2/authorize?response_type=token&client_id=e781a07d0760a0a">Upload to imgur</a>
+		Frames (affects speed): <input type="range" name="frames" min="2" max="100"/><output id="frames-output" for="frames"></output> <br/>
+		Amplitude: <input type="range" name="amplitude" min="1" max="100"/><output id="amplitude-output" for="amplitude"></output>
 	</body>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
@@ -26,17 +27,4 @@
 	<script src="js/NeuQuant.js"></script>
 	<script src="js/GIFEncoder.js"></script>
 	<script src="js/script.js"></script>
-
-	<script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-2641354-11']);
-  _gaq.push(['_setDomainName', 'chrisvalleskey.com']);
-  _gaq.push(['_trackPageview']);
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-	</script>
-
 </html>
